Make sure that layer's styles have proper resources interface set

BUG:443621